--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.password=Kurwamac3#
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+
+facility.openin-hour=8
+facility.closin-hour=20
+facility.address.city=Lublin
+facility.address.street=Dworcowa
+facility.address.number=12
